--- a/visualization.html
+++ b/visualization.html
@@ -8,18 +8,18 @@
 
   <body>
 
-  <div id="viz">
-    <div class="columnContainer">
-      <div id="partitions"></div>
-      <div id="items"></div>
-    </div>
-  </div>
-
   <svg width="800" height="400"></svg>
 
   <br>
-  <button type="button" id="add" onclick="addRandom()">Add</div>
-  <button type="button" id="remove" onclick="removeRandom()">Remove</div>
+  <select id="scheme-select" onchange="setPartitioner()">
+    <option value="modK">mod-K</option>
+    <option value="roundRobin">Round-Robin</option>
+    <option value="HRW">Highest random weight</option>
+    <option value="consistentHash">Consistent hashing</option>
+  </select>
+
+  <button type="button" id="add" onclick="addRandom()">Add Server</div>
+  <button type="button" id="remove" onclick="removeRandom()">Remove Server</div>
 
   <script src="./partitioning.js"></script>
   <script>
@@ -29,6 +29,21 @@
     let items = [...Array(32).keys()].map((i) => `item${i}`);
     let partitionGenerator = partition.HRW;
     let oldAssignments = [];
+
+    const choices = {
+      "modK": partition.modK,
+      "roundRobin": partition.roundRobin,
+      "HRW": partition.HRW,
+      "consistentHash": partition.consistentHash,
+    };
+
+    const setPartitioner = () => {
+      let select = document.getElementById("scheme-select");
+      let choice = select.options[select.selectedIndex].value;
+      console.log(choice);
+      partitionGenerator = choices[choice];
+      render(partitionGenerator, partitions, items);
+    }
 
     const addRandom = () => {
       console.log("allocating new server");
@@ -86,9 +101,13 @@
 
       let partSyms = svg.selectAll(".partition")
         .data(partitions)
+
+      partSyms
+        .transition()
+          .duration(250)
           .attr("cy", (_, i) => partPos(i, partitions.length)[1])
           .attr("cx", (_, i) => partPos(i, partitions.length)[0])
-          .attr("r", 10);
+          .attr("r", 12);
 
       partSyms
         .enter()
@@ -96,11 +115,17 @@
             .attr("class", "partition")
             .attr("cy", (_, i) => partPos(i, partitions.length)[1])
             .attr("cx", (_, i) => partPos(i, partitions.length)[0])
-            .attr("r", 10);
+            .attr("r", 0)
+          .transition()
+            .duration(250)
+            .attr("r", 12);
 
       partSyms
         .exit()
-          .remove();
+          .transition()
+            .duration(250)
+            .attr("r", 0)
+            .remove();
 
       const computePath = (d) => {
         let path = d3.path(),
@@ -137,7 +162,7 @@
           .remove();
     }
 
-    render(partitionGenerator, partitions, items);
+    setPartitioner()
   </script>
   </body>
 </html>
